--- a/plugin-datatables/package.json
+++ b/plugin-datatables/package.json
@@ -2,21 +2,45 @@
   "name": "plugin-datatable",
   "version": "0.1.0",
   "private": false,
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-react",
+        {
+          "runtime": "automatic"
+        }
+      ]
+    ]
+  },
+  "main": "dist/DataTables.js",
+  "module": "dist/DataTables.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mhycka/MickaelGuesdon_14_DataTables.git"
+  },
+  "keywords": [
+    "hrnet",
+    "DataTable"
+  ],
+  "author": "Koch Christopher",
+  "license": "ISC",
+  "homepage": "https://github.com/Mhycka/MickaelGuesdon_14_DataTables",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "sass": "^1.49.9",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "4.0.3",
+    "sass": "^1.50.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "babel ./src/lib -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/preset-react": "^7.16.0"
   }
 }
