--- a/plugin-datatables/package.json
+++ b/plugin-datatables/package.json
@@ -26,7 +26,7 @@
     "hrnet",
     "DataTable"
   ],
-  "author": "Koch Christopher",
+  "author": "Guesdon Mickaël",
   "license": "ISC",
   "homepage": "https://github.com/Mhycka/MickaelGuesdon_14_DataTables",
   "dependencies": {
